[gd_scene load_steps=25 format=2]

[ext_resource path="res://Actors/Enemy/enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/Resources/DamagedShader.gdshader" type="Shader" id=2]
[ext_resource path="res://objects/weapons/EnemyWeapons/BasicEnemyWeapon/BasicEnemyWeapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/projectiles/bullets/EnemyBullets/BasicEnemyBullet/VerySlowChargerBullet/VerySlowChargerBullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://Actors/Enemy/UniqueEnemy/PurpleEnemies/Bosses/BossChargerEnemy/BossChargerShootState.gd" type="Script" id=5]
[ext_resource path="res://Assets/Boss/path7527.png" type="Texture" id=6]
[ext_resource path="res://Actors/Enemy/UniqueEnemy/PurpleEnemies/Bosses/BossChargerEnemy/BossChargerIdleState.gd" type="Script" id=7]
[ext_resource path="res://Actors/Enemy/UniqueEnemy/PurpleEnemies/Bosses/BossChargerEnemy/BossChargerBullet.tscn" type="PackedScene" id=8]
[ext_resource path="res://Actors/Enemy/UniqueEnemy/PurpleEnemies/Bosses/BossChargerEnemy/BossChargerAim.gd" type="Script" id=9]
[ext_resource path="res://Actors/Enemy/UniqueEnemy/PurpleEnemies/Bosses/BossChargerEnemy/BossChargerEnemy.gd" type="Script" id=10]
[ext_resource path="res://icon.png" type="Texture" id=11]
[ext_resource path="res://Actors/Enemy/UniqueEnemy/PurpleEnemies/Bosses/BossChargerEnemy/Charge.gd" type="Script" id=12]
[ext_resource path="res://objects/LineTrail/Trail2D.tscn" type="PackedScene" id=13]
[ext_resource path="res://objects/HitBox2D/HitBoxArea2D.tscn" type="PackedScene" id=14]
[ext_resource path="res://Actors/Enemy/UniqueEnemy/PurpleEnemies/Bosses/BossChargerEnemy/BossChargerPhase2.gd" type="Script" id=15]
[ext_resource path="res://Actors/Enemy/UniqueEnemy/PurpleEnemies/Bosses/BossChargerEnemy/ChargerBossMoveState.gd" type="Script" id=16]
[ext_resource path="res://Actors/Enemy/UniqueEnemy/PurpleEnemies/Bosses/BossChargerEnemy/BossChargerPhase3.gd" type="Script" id=17]
[ext_resource path="res://Actors/Enemy/UniqueEnemy/PurpleEnemies/Bosses/BossChargerEnemy/BossChargerPhase1.gd" type="Script" id=18]
[ext_resource path="res://Actors/Enemy/UniqueEnemy/PurpleEnemies/Bosses/BossChargerEnemy/BossChargerRotateToDirectionState.gd" type="Script" id=19]
[ext_resource path="res://Actors/Enemy/UniqueEnemy/PurpleEnemies/Bosses/BossChargerEnemy/BossChargerEntranceState.gd" type="Script" id=20]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/damaged = false

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "Normal",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 40 )

[sub_resource type="CircleShape2D" id=4]
radius = 21.0

[node name="BossChargerEnemy" instance=ExtResource( 1 )]
script = ExtResource( 10 )
base_hp = 5000.0
_rotation_speed = 20.0
speed = 700
is_movement_enemy = true
crosshair_scale = 0.63
path_follow_speed = 25

[node name="AnimatedSprite" parent="." index="1"]
self_modulate = Color( 0.407843, 1, 0, 1 )
material = SubResource( 1 )
position = Vector2( -3.05176e-05, -6.10352e-05 )
rotation = -1.57079
scale = Vector2( 0.0861021, 0.0861021 )
frames = SubResource( 2 )

[node name="CollisionShape2D" parent="HurtBoxArea2D" index="2"]
shape = SubResource( 3 )

[node name="Label" parent="." index="3"]
visible = false

[node name="EnemyArea" parent="." index="4"]
monitorable = false

[node name="StateMachine" parent="." index="6"]
initial_state = NodePath("Entrance")

[node name="Idle" parent="StateMachine" index="0"]
script = ExtResource( 7 )

[node name="PathShoot" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 5 )
path_bullet = ExtResource( 8 )

[node name="Aim" type="Node" parent="StateMachine" index="5"]
script = ExtResource( 9 )

[node name="Entrance" type="Node" parent="StateMachine" index="6"]
script = ExtResource( 20 )

[node name="Charge" type="Node" parent="StateMachine" index="7"]
script = ExtResource( 12 )

[node name="Move" type="Node" parent="StateMachine" index="8"]
script = ExtResource( 16 )

[node name="RotateToDirection" type="Node" parent="StateMachine" index="9"]
script = ExtResource( 19 )

[node name="Phase1" type="Node" parent="StateMachine" index="10"]
script = ExtResource( 18 )

[node name="Phase2" type="Node" parent="StateMachine" index="11"]
script = ExtResource( 15 )

[node name="Phase3" type="Node" parent="StateMachine" index="12"]
script = ExtResource( 17 )

[node name="Weapon" type="Node2D" parent="." index="10"]
rotation = 1.57079

[node name="BasicEnemyWeapon" parent="Weapon" index="0" instance=ExtResource( 3 )]
bullet = ExtResource( 4 )
rotation_to_cannon = true
canons_path = NodePath("Cannons")

[node name="Cannons" type="Node2D" parent="Weapon/BasicEnemyWeapon" index="2"]
rotation = -3.14159

[node name="Cannon_0" type="Position2D" parent="Weapon/BasicEnemyWeapon/Cannons" index="0"]
position = Vector2( -73.9998, -80.0001 )
rotation = -0.785397

[node name="Cannon_1" type="Position2D" parent="Weapon/BasicEnemyWeapon/Cannons" index="1"]
position = Vector2( 0.000185013, -101 )

[node name="Cannon_2" type="Position2D" parent="Weapon/BasicEnemyWeapon/Cannons" index="2"]
position = Vector2( 74.0002, -83.9999 )
rotation = 0.523598

[node name="HitBoxArea2D" parent="Weapon" index="1" instance=ExtResource( 14 )]
max_number_of_hits = 9999999

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon/HitBoxArea2D" index="0"]
shape = SubResource( 4 )

[node name="Lines" type="Node2D" parent="." index="13"]

[node name="Path2D" type="Path2D" parent="Lines" index="0"]
position = Vector2( 281, 519 )
curve = null

[node name="PathFollow2D" type="PathFollow2D" parent="Lines/Path2D" index="0"]
position = Vector2( 725, -11 )
rotation = -0.355539
loop = false

[node name="Sprite" type="Sprite" parent="Lines/Path2D/PathFollow2D" index="0"]
visible = false
texture = ExtResource( 11 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Lines/Path2D/PathFollow2D/Sprite" index="0"]
position = Vector2( -51.7343, -435.228 )
rotation = 0.355539
remote_path = NodePath("../../../../..")

[node name="Line2D" type="Line2D" parent="Lines" index="1"]
visible = false
width = 0.0
default_color = Color( 0.992157, 1, 0, 0.572549 )

[node name="Trail2D" parent="." index="14" instance=ExtResource( 13 )]
position = Vector2( -3.05176e-05, -6.10352e-05 )
rotation = 1.57079
width = 100.0
default_color = Color( 0.266667, 1, 0, 0.376471 )
lenght = 14

[node name="move_positions_container" type="Node2D" parent="." index="15"]

[node name="move_location" type="Position2D" parent="move_positions_container" index="0"]
position = Vector2( 552, 307 )

[node name="Sprite2" type="Sprite" parent="move_positions_container/move_location" index="0"]
position = Vector2( 16, 18 )
rotation = -0.355539
texture = ExtResource( 11 )

[node name="down" type="Position2D" parent="move_positions_container" index="1"]
position = Vector2( 588, 2195 )
